--- a/app/views/data-connect/add-connection-modal.html
+++ b/app/views/data-connect/add-connection-modal.html
@@ -30,16 +30,16 @@
 					</div>
 
 					<div class="col-xs-10 tab-content col-xs-offset-2">
-						<div class="tab-pane active" id="source-type-tab">
+						<div class="tab-pane active" id="source-format-tab">
 							<div class="box-header">
 								<h3 class="box-title">Choose Data Source format</h3>
 							</div>
 							<div class="row">
 								<div class="col-sm-10">
-									<div class="col-md-4 col-sm-4" ng-repeat="(key, sourceType) in sourceTypeListWEndpoint">
-										<div id="{{key}}" ng-click="setSourceType($event);" class="source-type-item" ng-class="{selected : key == inputs.sourceType, nologo: !sourceType.logo}">
-											<img src="{{sourceType.logo}}" name="{{key}}" ng-show="sourceType.logo"/>
-											<h4><span for="{{sourceType.key}}">{{sourceType.name}}</span></h4>
+									<div class="col-md-4 col-sm-4" ng-repeat="(key, sourceFormat) in sourceTypeListWEndpoint">
+										<div id="{{key}}" ng-click="setSourceFormat($event);" class="source-format-item" ng-class="{selected : key == inputs.sourceFormat, nologo: !sourceFormat.logo}">
+											<img src="{{sourceFormat.logo}}" name="{{key}}" ng-show="sourceFormat.logo"/>
+											<h4><span for="{{sourceFormat.key}}">{{sourceFormat.name}}</span></h4>
 										</div>
 									</div>
 								</div>
@@ -64,9 +64,19 @@
 										(validateStatus == 'waiting' ? 'fa-spinner fa-pulse' :
 										(validateStatus == 'success' ? 'fa-check' : ''))"></i> 
 									</div>
+									<div class="form-group" ng-show="inputs.sourceFormat == 'geojson'">
+										<label for="privacy">Source type</label><br/>
+										<ol name="sourceType" class="nya-bs-select" ng-model="inputs.sourceType">
+											<li nya-bs-option="value in sourceTypeList">
+												<a>{{value.name}}</a>
+											</li>
+										</ol><br/>
+										<h4 style="display: inline-block"><small>The type of the source that this data corresponds to.</small></h4>
+									</div>
 									<div class="form-group">
 										<label for="privacy">Public data</label>
-										<toggle-switch name="privacy" class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="inputs.public"></toggle-switch>
+										<toggle-switch name="privacy" class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="inputs.public"></toggle-switch><br/>
+										<h4 style="display: inline-block"><small>Public data can be viewed & shared by loklak users.</small></h4>
 									</div>
 									<div class="form-group"><label>Advanced options <i id="toggle-show-data" class="fa" ng-class="showAdvancedOptions ? 'fa-caret-down' : 'fa-caret-right'" ng-click="showAdvancedOptions = !showAdvancedOptions"></i></i>
 									</div>
@@ -82,7 +92,7 @@
 										</div>
 										<div class="form-group">
 											<label for="lifetime">Lifetime</label>
-											<h4><small>Expiration date of the source. Leave blank for ever-lasting data</small></h4>
+											<h4><small>Expiration date of the source. Leave blank for ever-lasting data.</small></h4>
 											<div class="form-inline">
 												<div class="input-group dropdown">
 													<span class="input-group-addon"><span class="fa fa-calendar"></span></span>
@@ -109,9 +119,9 @@
 								<div class="row" ng-show="showCurrentData">
 								<pre>{{currentData | json }}</pre>
 								</div>
-								<div class="row" ng-show="currentLoklakFields == null && inputs.sourceType">
+								<div class="row" ng-show="currentLoklakFields == null && inputs.sourceFormat">
 									<div class="col-md-8">
-										<h4><small>This step is not required for data of type <code>{{sourceTypeList[inputs.sourceType]['name']}}.</code></small></h4>
+										<h4><small>This step is not required for data of type <code>{{sourceTypeList[inputs.sourceFormat]['name']}}.</code></small></h4>
 									</div>
 								</div>
 								<div ng-hide="currentLoklakFields == null">
