Close add connection modal after successfully added data

--- a/app/views/data-connect/add-connection-modal.html
+++ b/app/views/data-connect/add-connection-modal.html
@@ -4,7 +4,7 @@
 		<!-- Modal content-->
 		<div class="modal-content" id="add-connection-modal-content">
 			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal">&times;</button>
+				<button type="button" class="close" data-dismiss="modal" id="close-add-connection-modal">&times;</button>
 				<h2 class="modal-title">Import Data Source</h2>
 				<div class="alert alert-success alert-dismissible" role="alert" ng-show="messages.success">
 					<button type="button" ng-click="hideSuccessPanel()" class="close"><span aria-hidden="true">&times;</span></button>
