--- a/app/views/data-connect/data-connect.html
+++ b/app/views/data-connect/data-connect.html
@@ -75,8 +75,7 @@
 				</div>
 			</div>
 		</li>
-		</ul>
-	</div><div id="single-data-map"></div>
+		</ul><div id="single-data-map"></div>
 	<div add-connection-modal></div>
 	<div map-view-modal></div>
 	<button id="open-confirm-modal" class="hide" data-toggle="modal" data-target="#confirm-delete-modal">Delete</button>
