--- a/app/views/data-connect/map-view-modal.html
+++ b/app/views/data-connect/map-view-modal.html
@@ -6,10 +6,7 @@
 				<h2 class="modal-title">Map View</h2>
 			</div>
 			<div class="modal-body" style="padding: 0">
-				<div id="single-data-map" style="height: 300px;"></div>
-			</div>
-			<div class="modal-footer">
-					<a id="close-map-view-button" data-dismiss="modal" type="button" class="btn btn-loklak-blue">Close</a>
+				<div id="single-data-map"></div>
 			</div>
 		</div>
 	</div>
