Added error msg and changed server address

--- a/app/views/analyze/analyze.html
+++ b/app/views/analyze/analyze.html
@@ -193,6 +193,7 @@ td
                 <!-- Main analysis -->
                 <div id="loadmsg" class="main-result-container whitebg"><img id="loader" src="../images/whiteloader.gif"></img><h3 id="loadingmessage">Analyzing the latest data for you.Please hold on.<h3>
                     <div id="notfoundmessage">Sorry we did not find anyone with this account</div>  
+                    <div id="errormessage">{{followers_status}}</div>
                 </div>
                 <div id="analysis-report" class="main-result-container whitebg" >
                     <div class="row">
