--- a/app/views/home.html
+++ b/app/views/home.html
@@ -123,7 +123,7 @@
 </div>
 
 <!-- Template for map view -->
-<div ng-show="map.isShowingMapNotHome" class="content-wrapper map-view">
+<div ng-show="map.isShowingMapNotHome" class="map-view">
 
     <div class="logged-content map-container-parent" ng-show="root.twitterSession">
        <span class="toggle-map-feed fa fa-chevron-circle-left" ng-click="map.toggleMapFeed();"></span>
