--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -248,7 +248,7 @@
 /* Anonymous content */
     .map-view {
     	.anonymous-session-content {
-    		padding-top: 0;	
+    		margin-top: -96px;
     	}
     }
 	.anonymous-session-content {
