Move tweet feature to tweet-feature-drt.js, minor style fix, reduce delay of trends request

--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -74,6 +74,7 @@
 </header>
 
 <!-- Modal -->
+<div tweet-feature-drt></div>
 <div id="myModal" class="modal" role="dialog">
   <div class="modal-dialog">
 
