Fixes #484 Patched the main login sign up lightbox

--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -156,8 +156,8 @@
         <h4 class="modal-title" style="text-align:center">Signup for loklak</h4>
       </div>
       <div class="modal-body">
-        <h1 class="fa fa-twitter fa-6" style="color:#55acee;margin-left:45%;font-size:500%;"></h1>
-        <h3 style="text-align:center;">Not on loklak ? Sign up, tune into things as they happen and get updates as they happen</h3>
+        <img id="loklak-signup-icon" src="../images/loklak_icon_yellow_signup.png">
+        <h3 style="text-align:center;">Not on loklak? Get more out of your twitter and weibo! Use maps, create walls, see trends and reports and help to build an open education project.</h3>
       </div>
       <div class="modal-footer" style="text-align:center;">
         <button class="btn btn-info btn-flat" value="Sign up Via Twitter" ng-click="root.hello('twitter').login()"><i class="fa fa-twitter"></i>&nbsp;Signup with Twitter</button>
