--- a/app/views/signin-twitter.html
+++ b/app/views/signin-twitter.html
@@ -18,7 +18,7 @@
 <div ng-show="!twitterSession" class="signin">
 	<a href="">
 		<span class="link" ng-href="#signupModal" data-target="#signupModal">
-			<button type="button" class="btn btn-loklak-blue btn-lg" data-toggle="modal" data-target="#signupModal"><i class="fa fa-twitter"></i>Sign in</button>
+			<button type="button" class="btn btn-loklak-blue btn-lg" data-toggle="modal" data-target="#signupModal"><i class="fa"></i>Sign in</button>
 		</span>
 	</a>
 </div>
