--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -97,7 +97,7 @@
                 <input type="hidden" name="maplatSouth" ng-model="root.maplatSouth" id="maplatSouth">
                 <input type="hidden" name="maplongEast" ng-model="root.maplongEast" id="maplongEast">
                 <input type="hidden" name="maplatNorth" ng-model="root.maplatNorth" id="maplatNorth">
-                <div id="map" style="width: 100%; height: 300px;"></div>
+                <div id="tweet-map" style="width: 100%; height: 300px;"></div>
                 <textarea name="largeTextAttachment" id="largeTextAttachment" ng-model="root.largeTextAttachment"></textarea>
             </div>
         </div>
@@ -198,7 +198,7 @@ $('#myModal').on('shown.bs.modal', function (e) {
   }
 
   var imageHandlerCount = 1;
-  var map;
+  var tweetmap;
 
   function handleFileSelect(evt) {
     var files = evt.target.files; // FileList object
@@ -248,7 +248,7 @@ $('#myModal').on('shown.bs.modal', function (e) {
     sendPositionDetails(latitude, longitude);
   }
 
-  $("#map").hide();
+  $("#tweet-map").hide();
   $("#CancelMap").hide();
   $("#largeTextAttachment").hide();
   $("#cancelLargeTextAttachment").hide();
@@ -259,10 +259,10 @@ $('#myModal').on('shown.bs.modal', function (e) {
 
   function onMapClick(e) {
     console.log(e);
-    var mapZoomLevel = map.getZoom();
+    var mapZoomLevel = tweetmap.getZoom();
     $("#mapZoomLevel").val(mapZoomLevel);
-    console.log(map.getBounds());
-    var bound = map.getBounds();
+    console.log(tweetmap.getBounds());
+    var bound = tweetmap.getBounds();
     var longWest = parseFloat(bound._southWest.lng);
     var latSouth = parseFloat(bound._southWest.lat);
     var longEast = parseFloat(bound._northEast.lng);
@@ -273,8 +273,8 @@ $('#myModal').on('shown.bs.modal', function (e) {
     $("#maplatNorth").val(latNorth);
     if(typeof(new_event_marker)==='undefined')
     {
-      new_event_marker = new L.marker(e.latlng,{bounceOnAdd: true}).addTo(map); 
-      map.panTo(new L.LatLng(e.latlng.lat, e.latlng.lng));
+      new_event_marker = new L.marker(e.latlng,{bounceOnAdd: true}).addTo(tweetmap); 
+      tweetmap.panTo(new L.LatLng(e.latlng.lat, e.latlng.lng));
       latitude = e.latlng.lat;
       longitude = e.latlng.lng;
       sendPositionDetails(latitude, longitude);
@@ -282,7 +282,7 @@ $('#myModal').on('shown.bs.modal', function (e) {
     else 
     {
       new_event_marker.setLatLng(e.latlng);  
-      map.panTo(new L.LatLng(e.latlng.lat, e.latlng.lng));
+      tweetmap.panTo(new L.LatLng(e.latlng.lat, e.latlng.lng));
       latitude = e.latlng.lat;
       longitude = e.latlng.lng;
       sendPositionDetails(latitude, longitude);
@@ -292,7 +292,7 @@ $('#myModal').on('shown.bs.modal', function (e) {
   console.log(latitude + ',' + longitude);
 
   function setMap(latitude, longitude) {
-    map.panTo(new L.LatLng(latitude, longitude));
+    tweetmap.panTo(new L.LatLng(latitude, longitude));
   }
 
   var osmUrl = 'http://{s}.tile.osm.org/{z}/{x}/{y}.png',
@@ -301,28 +301,28 @@ $('#myModal').on('shown.bs.modal', function (e) {
         'Imagery © <a href="http://mapbox.com">Mapbox</a>',
     osm = L.tileLayer(osmUrl, {maxZoom: 18, attribution: osmAttrib});
 
-  map = L.map('map').setView([51.505, -0.159], 15).addLayer(osm);
+  tweetmap = L.map('tweet-map').setView([51.505, -0.159], 15).addLayer(osm);
 
-  map.on('tileerror', function(error, tile) {
+  tweetmap.on('tileerror', function(error, tile) {
     console.log(error);
     console.log(tile);
   });
 
   function setMapTile() {
-    $("#map").show();
+    $("#tweet-map").show();
     $("#CancelMap").show();
     $("#attachMap").hide();
     $('#filePicker').hide();
     $("#optionChoice").val('mapAttachment');
     setTimeout(function() {
       console.log("Triggered");
-      map.invalidateSize();
+      tweetmap.invalidateSize();
     }, 1000);
   }
 
   function cancelMapTile() {
     $("#CancelMap").hide();
-    $("#map").hide();
+    $("#tweet-map").hide();
     $("#attachMap").show();
     $('#filePicker').show();
     $("#optionChoice").val('');
@@ -360,7 +360,7 @@ $('#myModal').on('shown.bs.modal', function (e) {
     $("#optionChoice").val('');
   }
 
-  map.on('click', onMapClick);
+  tweetmap.on('click', onMapClick);
 
 document.getElementById('fileInput').addEventListener('change', handleFileSelect, false);
 
