Adapt message view popup modal to #449 design
With raw json appended as rich text of data source, more information about the data could be displayed, & can be configured by each source type.

--- a/app/styles/_data-connect.scss
+++ b/app/styles/_data-connect.scss
@@ -137,13 +137,22 @@
 		width: 100%;
 	}
 }
-
+#message-view-modal .modal-dialog {
+	max-height: 92%;
+}
+#message-view-modal .modal-content {
+	height: 98%;
+	overflow-y: auto;
+}
 #message-view-modal .single-tweet {
 	position: relative;
 	transform: none;
 	top: 0;
 	left: 0;
 	width: 100%;
+}
+#message-view-modal .modal-header .close {
+	margin-top: -11px;
 }
 #add-connection-modal {
 	overflow-y: hidden;
