Add share button Fix bug causing message unable to delete & update Fix render bug caused by message that don't contain rich text

--- a/app/styles/_single-imported-status.scss
+++ b/app/styles/_single-imported-status.scss
@@ -17,3 +17,12 @@
 .single-imported-status .footer p {
 	float: right;
 }
+
+.single-imported-status .importer img {
+	width: 20px;
+	border-radius: 10px;
+}
+
+.single-imported-status .action-list i {
+	cursor: pointer;
+}
