--- a/app/views/data-connect/single-imported-status.html
+++ b/app/views/data-connect/single-imported-status.html
@@ -7,7 +7,11 @@
 		{{richData[sourceType.template.subHeader]}}
 	</div>
 	<div class="footer">
-		<div>Importer: <img src="{{importer.user.profile_image_url_https}}"/></div>
 		<p>Shared by {{profile.sharers | arraySize}} users</p>
+		<span class="importer">Importer: <img src="{{importer.user.profile_image_url_https}}"/></span>
+		<hr/>
+		<div class="action-list">
+			<i class="fa fa-share" ng-click="share()" tile="Share this"></i>
+		</div>
 	</div>
 </div>
