--- a/app/views/home.html
+++ b/app/views/home.html
@@ -14,6 +14,11 @@
                         <span class="fa fa-chevron-circle-right">
                         </span>    
                     </div>
+                    <div class="switch-to-timeline-text" ng-click="map.toggleMapAndTimeline();">
+                        <span class="fa fa-chevron-circle-left">
+                        </span>
+                        <span>Return to timeline</span>    
+                    </div>
                     <img ng-src="{{root.twitterSession.profile_banner_url }}" alt="user-banner-photo" ng-show="root.twitterSession.profile_banner_url">    
                 </div>
                 <div class="home-user-info-content">
@@ -68,7 +73,7 @@
             <div class="row cms-view">
                 <div class="main-result-container">
                     <div class="statuses-container box-body chat" id="chat-box" style="width: auto;" infinite-scroll="root.loadMoreHomeFeed(15)">
-                        <div ng-repeat="status in root.twitterFriends.data | limitTo: root.homeFeedLimit">
+                        <div ng-repeat="status in root.twitterFriends.data | limitTo: root.homeFeedLimit" ng-attr-id="{{status.id}}" ng-click="map.openPopup(status.id);">
                             <div class="item" ng-click="toggleDetail($event)">
                                 <img class="friend-profile-img" src="{{status.profile_image_url}}">
                                 <p class="message home-tweet-text">
@@ -77,11 +82,7 @@
                                 <span ng-bind-html="status.status.text | tweetTextLink | tweetMention | tweetHashtag | removeTwitterPicLink | toTrusted "></span>
                                 </p>
 
-                                <!-- <div class="home-debugged-link-container" home-debugged-link entities="status.status.entities"></div>
- -->
-                                <!-- <div ng-repeat="media in status.status.entities.media">
-                                  <img src="{{media.media_url}}" alt="" width="100%"> 
-                                </div> -->
+                                <div class="home-debugged-link-container" home-debugged-link entities="status.status.entities"></div>
                             </div>
                         </div>
                     </div> 
@@ -116,47 +117,19 @@
 
     </div>
 
-    <!-- Search box for anonymous user-no-followers -->
-    <div ng-include src="'anonymous-session-content.html'"></div>
-    <!-- End search box for anonymous users -->
-
-</div>
-
-<!-- Template for map view -->
-<div ng-show="map.isShowingMapNotHome" ng-class="{'map-view': true, 'content-wrapper': root.twitterSession}">
 
     <div class="logged-content map-container-parent" ng-show="root.twitterSession">
-       <span class="toggle-map-feed fa fa-chevron-circle-left" ng-click="map.toggleMapFeed();"></span>
-       <span class="switch-to-timeline fa fa-chevron-circle-left" ng-click="map.toggleMapAndTimeline();"></span>
+       <span class="toggle-map-feed fa fa-chevron-circle-right" ng-click="map.toggleMapFeed();"></span>
        <div id="map" ng-show="root.twitterSession"></div>
-       <div class="activity-feed show-feed">
-        <div class="feed-header">
-          <span class="toggle-map-feed-clone fa fa-chevron-circle-right" ng-click="map.toggleMapFeed();"></span>
-          <p>Activity feeds</p>
-        </div>  
-        <div class="feed-content">
-          <div ng-repeat="status in root.twitterFriends.data | limitTo: map.feedLimit" ng-attr-id="{{status.id}}" ng-click="map.openPopup(status.id);">
-              <div class="item">
-                  <img class="friend-profile-img" src="{{status.profile_image_url}}">
-                  <p class="message home-tweet-text">
-                  <span class="home-user-screen-name">@{{ status.screen_name }} - {{ status.status.created_at | tweetFromNow }}</span>
-                  <br>
-                  <span ng-bind-html="status.status.text | tweetTextLink | tweetMention | tweetHashtag | removeTwitterPicLink | toTrusted "></span>
-                  </p>
-               <!--    <div class="home-debugged-link-container" home-debugged-link entities="status.status.entities"></div> -->
-              </div>
-          </div>
-        </div>
-        </div>
-
+    
         <div class="location-fail-notice">
           <div class="warning-sign"><i class="fa fa-exclamation-triangle"></i></div>
           <p class="notice-text">The user you're searching for doesn't seem to have location enabled!</p>
         </div>
     </div>  
-
     <!-- Search box for anonymous user-no-followers -->
     <div ng-include src="'anonymous-session-content.html'"></div>
     <!-- End search box for anonymous users -->
 
 </div>
+
