--- a/app/styles/_single-imported-status.scss
+++ b/app/styles/_single-imported-status.scss
@@ -23,6 +23,6 @@
 	border-radius: 10px;
 }
 
-.single-imported-status .action-list i {
+.single-imported-status .action-list span {
 	cursor: pointer;
 }
