- Display more friendly version of sharers list - Remove importer data from file view as importer is just the 1st sharer - Small design fix file view

--- a/app/styles/_data-connect.scss
+++ b/app/styles/_data-connect.scss
@@ -150,6 +150,7 @@
 #message-view-modal .modal-body {
 	max-height: calc(100% - 73px);
 	overflow-y: auto;
+	padding: 5px 15px;
 }
 #message-view-modal .single-tweet {
 	position: relative;
