--- a/app/styles/_single-imported-status.scss
+++ b/app/styles/_single-imported-status.scss
@@ -4,7 +4,6 @@
 
 .single-imported-status .right-logo img {
 	width: 100px;
-	height: 50px;
 }
 .single-imported-status .body {
 	min-height: 108px;
@@ -12,6 +11,7 @@
 
 .single-imported-status .footer {
 	width: 100%;
+	margin-bottom: 10px;
 }
 
 .single-imported-status .footer p {
