--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -4,13 +4,13 @@
 	> .content-container {
 		z-index: 500;
 		position: relative;
-		transition: all 1s ease-in-out;
+		transition: all 0.6s ease-in-out;
 		margin-left: 50%;
 	    transform: translateX(-50%);
 	    -ms-transform: translateX(-50%);
 	}
 	> .content-container.moved-right {
-		transition: all 1s ease-in-out 0.5s;
+		transition: all 0.6s ease-in-out 0.3s;
 		margin-left: 100%;
 		transform: translateX(-100%);
 		-ms-transform: translateX(-100%);
@@ -32,34 +32,40 @@
 		position: absolute;
 		padding: 20px 15px 0 0;
 		left: 0;
-		transition: all 1s ease-in-out;
+		transition: all 0.6s ease-in-out;
 		z-index: 501;
 		.home-user-info {
-			transition: all 0.5s ease-in-out;
+			transition: all 0.3s ease-in-out;
 		}
 	}
 	.left-result-container.moved-right {
 		background: white;
-		transition: all 1s ease-in-out 0.5s;
+		transition: all .6s ease-in-out .3s;
 		left: calc(100% - 270px);
 	    width: 270px;
 	    padding: 7px;
 	    .home-user-info {
 	    	border: 0px solid transparent;
-	    	transition: all 0.5s ease-in-out 1s;
+	    	transition: all 0.3s ease-in-out 0.6s;
 	    	margin-top: 10px;
 	    }
 	    .switch-to-map {
 	    	opacity: 0;
-	    	transition: all 0.5s ease-in-out;
+	    	transition: all .3s ease-in-out;
+	    	span {
+	    		opacity: 0;
+	    	}
 	    }
 	    .switch-to-timeline-text {
 	    	opacity: 1;
-	    	transition: all 0.5s ease-in-out 1.5s;
+	    	transition: all 0.3s ease-in-out 0.9s;
+	    	span {
+	    		opacity: 1;
+	    	}
 	    }
 		.followers-list-container {
 			opacity: 0;
-			transition: all 0.5s ease-in-out;
+			transition: all .3s ease-in-out;
 		}
 
 	}
@@ -200,7 +206,7 @@
 		border-radius: 10px;
 		width: 100%;
 		text-align: center;
-		transition: all 0.5s ease-in-out 1s;
+		transition: all .3s ease-in-out .6s;
 		opacity: 1;
 		display: inline-block;
 		position: absolute;
@@ -211,6 +217,7 @@
 		background-color: #55ACEE;
 		color: white;
 		span {
+			opacity: 1;
 			font-size: 14px;
 			&:nth-child(2) {
 				margin-left: 10px;
@@ -225,7 +232,7 @@
 		border-radius: 10px;
 		width: 100%;
 		text-align: center;
-		transition: all 0.5s ease-in-out 1s;
+		transition: all .3s ease-in-out .6s;
 		opacity: 0;
 		display: inline-block;
 		position: absolute;
@@ -236,6 +243,7 @@
 		background-color: #55ACEE;
 		color: white;
 		span {
+			opacity: 0;
 			font-size: 14px;
 			&:nth-child(2) {
 				margin-left: 10px;
@@ -248,7 +256,7 @@
 
 	.followers-list-container {
 		opacity: 1;
-		transition: all 0.5s ease-in-out 1s;
+		transition: all .3s ease-in-out .6s;
 		display: block;
 		padding: 10px;
 		background-color: white;
@@ -297,7 +305,7 @@
 /* Center result */
 .center-result-container {
 	z-index: 502;
-	transition: all 1s ease-in-out;
+	transition: all 0.6s ease-in-out;
 	margin-left: 25%;
 	position: relative;
 	top: 0;
@@ -306,17 +314,17 @@
 		padding-right: 0;
 	}
 	.cms-view {
-		transition: all 0.5s ease-in-out;
+		transition: all 0.3s ease-in-out;
 	}
 }
 .center-result-container.moved-right {
-	transition: all 1s ease-in-out 0.5s;
+	transition: all .6s ease-in-out .3s;
 	margin-left: calc(100% - 255px);
 	position: relative;
 	top: 208px;
 	width: 270px;
 	> .cms-view {
-		transition: all 0.5s ease-in-out 1s;
+		transition: all 0.3s ease-in-out 0.6s;
 		padding: 20px 0 0 0;
 		margin: 0;
 	}
@@ -360,12 +368,12 @@
 		padding-right: 0;
 	}
 	opacity: 1;
-	transition: all 0.5s ease-in-out 1s;
+	transition: all .3s ease-in-out .6s;
 	position: absolute;
 	right: 0;
 }
 .right-result-container.moved-right {
-	transition: all 0.5s ease-in-out;
+	transition: all .3s ease-in-out;
 	opacity: 0;
 }
 
